# ordeq

./: .gitignore  .mdformat.toml  404.html  README.md  index.html  justfile  mkdocs.yml  objects.inv  ok.py  pyproject.toml  sitemap.xml
.github/: copilot-instructions.md
.github/workflows/: build.yml  docs.yml  merge.yml  publish-docs.yml  pull_request.yml  release.yml  tag.yml
CONTRIBUTING/: index.html
api/ordeq/: index.html
api/ordeq/_catalog/: index.html
api/ordeq/_graph/: index.html
api/ordeq/_hook/: index.html
api/ordeq/_io/: index.html
api/ordeq/_nodes/: index.html
api/ordeq/_registry/: index.html
api/ordeq_altair/: index.html
api/ordeq_args/: index.html
api/ordeq_boto3/: index.html
api/ordeq_common/: index.html
api/ordeq_duckdb/: index.html
api/ordeq_faiss/: index.html
api/ordeq_files/: index.html
api/ordeq_huggingface/: index.html
api/ordeq_ibis/: index.html
api/ordeq_joblib/: index.html
api/ordeq_manifest/: index.html
api/ordeq_matplotlib/: index.html
api/ordeq_networkx/: index.html
api/ordeq_numpy/: index.html
api/ordeq_pandas/: index.html
api/ordeq_polars/: index.html
api/ordeq_pydantic/: index.html
api/ordeq_pymupdf/: index.html
api/ordeq_pyproject/: index.html
api/ordeq_requests/: index.html
api/ordeq_sentence_transformers/: index.html
api/ordeq_spark/: index.html
api/ordeq_test_utils/: index.html
api/ordeq_toml/: index.html
api/ordeq_viz/: index.html
api/ordeq_yaml/: index.html
contributing/acknowledgements/: index.html
contributing/contributing/: index.html
contributing/documentation/: index.html
docs/: .nav.yml  CONTRIBUTING.md  __init__.py  blocks.py  index.md  packages.md  pyproject.toml
docs/contributing/: documentation.md  integration_model.md  integrations.md
docs/getting-started/: introduction.md
docs/guides/: cloud_storage.md  custom_io.md  kedro.md  lazy_io.md  node_parameters.md  parameters.md  parametrized_io.md  run_and_viz.md  starting_a_new_project.md  testing_nodes.md
examples/integration-docker/: Dockerfile  README.md  diagram.mermaid  pyproject.toml  viz.py
examples/integration-streamlit/: README.md  diagram.mermaid  pyproject.toml  viz.py
examples/integration-streamlit/src/example/: app.py  pipeline.py
examples/integration-streamlit/src/integration_streamlit/: app.py  catalog.py  element.py  pipeline.py
examples/integration-streamlit/tests/: test_element.py
examples/integration_streamlit/: README.md  pyproject.toml
examples/marimo_ordeq/: README.md
examples/orchestration-airflow/: .gitignore  Dockerfile  README.md  air_quality.mermaid  docker-compose.yml  example-api-response.json  pyproject.toml  viz.py
examples/orchestration-airflow/dags/: dag_docker.py  dag_nodes.py  dag_ordeq.py  dag_original.py  dag_pipeline.py
examples/orchestration-airflow/src/air_quality/: __main__.py  catalog.py  paths.py  pipeline.py  viz.py
examples/orchestration-airflow/src/air_quality_insights/: __main__.py  catalog.py  pipeline.py
examples/orchestration-kubeflow/: README.md  ml_pipeline.mermaid  original.py  pyproject.toml  run_kubeflow.py  run_local.py  viz.py
examples/orchestration-kubeflow/ml_pipeline/: catalog.py  preprocessing.py  train.py
examples/project-ml/: README.md  pipeline_diagram.mermaid  pyproject.toml
examples/project-ml/src/project_ml/: __main__.py  catalog.py
examples/project-ml/src/project_ml/config/: batch_prediction_config.py  deployment_config.py  model_config.py  model_evaluation_config.py  real_time_prediction_config.py
examples/project-ml/src/project_ml/data/: data_preprocessing.py  raw_data_loading.py
examples/project-ml/src/project_ml/deploy/: predict.py
examples/project-ml/src/project_ml/model/: cnn_architecture.py  digit_classifier.py  model_evaluation.py  train_model.py
examples/project-ml/tests/model/: test_cnn_architecture.py
examples/rag-pipeline-scaffold/: README.md  pyproject.toml  rag_pipeline.mermaid  viz.py
examples/rag-pipeline-scaffold/src/rag_pipeline/: __main__.py
examples/starter-kedro-spaceflights/: .gitignore  README.md  diagram.mermaid  pyproject.toml  viz.py
examples/starter-kedro-spaceflights/src/kedro_spaceflights/: catalog.py  pipeline.py
examples/starter-nested-subpipelines/: README.md  pyproject.toml  viz.py
examples/starter-package/: README.md  diagram.mermaid  pyproject.toml  viz.py
examples/starter-package/src/package/: __main__.py  pipeline.py
examples/starter-package/src/starter_package/: __main__.py  pipeline.py
examples/starter-single-file/: README.md  diagram.mermaid  pyproject.toml  viz.py
examples/starter-subpipelines/: README.md  diagram.mermaid  pyproject.toml  viz.py
examples/starter-subpipelines/src/package/: __main__.py
examples/starter-subpipelines/src/starter_subpipelines/: __main__.py
examples/starter-testing-nodes/: .gitignore  pyproject.toml
examples/starter-testing-nodes/src/starter_testing_nodes/: catalog.py  pipeline.py
examples/starter-testing-nodes/tests/: test_catalog.py  test_pipeline_run.py  test_pipeline_unit.py
examples/starter-testing-nodes/tests-resources/: test-names.csv
examples/testing-nodes/: .gitignore  README.md  diagram.mermaid  pyproject.toml  viz.py
getting-started/introduction/: index.html
guides/cloud_storage/: index.html
guides/custom_hooks/: index.html
guides/custom_io/: index.html
guides/kedro/: index.html
guides/lazy_io/: index.html
guides/node_parameters/: index.html
guides/parametrized_io/: index.html
guides/run_and_viz/: index.html
guides/testing_nodes/: index.html
scripts/: check_package_changes.py  copy-readme-license.sh  generate_api_docs.py  generate_draft_releases.py  generate_package_overview.py  list_changed_packages.py  list_dependencies.py  next_tag.py  release.sh
search/: search_index.json
src/ordeq/io/: base.py
(+131 files in other folders)
