[build-system]
requires = ["setuptools>=75.0", "setuptools_scm>=8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "integration-streamlit"
version = "0.1.0"
description = "Example integration of Streamlit with a Ordeq."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ordeq",
    "streamlit"
]

[tool.ordeq]
group = "examples"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
