[build-system]
requires = ["setuptools>=75.0", "setuptools_scm>=8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestration-kubeflow"
version = "0.1.0"
description = "Example of using Ordeq to orchestrate workflows on Kubeflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ordeq",
    "ordeq-files",
    "ordeq-pandas",
    "kpf",
]

[tool.ordeq]
group = "examples"

[tool.setuptools.packages.find]
namespaces = true
where = ["."]
