[build-system]
requires = ["setuptools>=75.0", "setuptools_scm>=8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Example pipeline architecture for a RAG pipeline."
requires-python = ">=3.10"
dependencies = [
    "ordeq",
    "ordeq-faiss",
    "ordeq-files",
    "ordeq-pandas",
    "ordeq-pymupdf",
    "ordeq-sentence-transformers",
    "ordeq-viz",
]

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
