[build-system]
requires = ["setuptools>=75.0", "setuptools_scm>=8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "starter-subpipelines"
version = "0.1.0"
description = "Starter project for Ordeq using a package structure and sub-pipelines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ordeq",
    "ordeq-requests",
    "ordeq-yaml"
]

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
